force-app/main/default/objects/Request__c/fields/Adapt__c.field-meta.xml
<CustomField>
    <fullName>Adapt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days estimated for Adaptation and Ongoing Support.</description>
    <inlineHelpText>Number of days estimated for Adaptation and Ongoing Support.</inlineHelpText>
    <label>Adapt &amp; Ongoing Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>