force-app/main/default/objects/Request__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Answer from Functional team for the Questions raised from Norfolk</description>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>