force-app/main/default/objects/Request__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <description>This is the date the requirement is assigned to the developer for build</description>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>