force-app/main/default/objects/Request__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the  user that  is assigned to build the requirement</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>