force-app/main/default/objects/Request__c/fields/Brief_Notes_Limit_255__c.field-meta.xml
<CustomField>
    <fullName>Brief_Notes_Limit_255__c</fullName>
    <inlineHelpText>Any additional context that will help with estimation</inlineHelpText>
    <label>Additional Context (Limit 255)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>