force-app/main/default/objects/Request__c/fields/Build_Status__c.field-meta.xml
<CustomField>
    <fullName>Build_Status__c</fullName>
    <description>This is the build status</description>
    <inlineHelpText>Updated By Developer - 10%, 20%, 35%, 50%, 60%, 75%, 90% ||
Updated By Functional Team - 70%,95%, 100% ||
Updated by Onshore Lead - 80%</inlineHelpText>
    <label>Build Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started Component</fullName>
            </value>
            <value>
                <fullName>Development in Progress</fullName>
            </value>
            <value>
                <fullName>Review Ready</fullName>
            </value>
            <value>
                <fullName>Feedback Incorporated</fullName>
            </value>
            <value>
                <fullName>Offshore Unit Testing Complete</fullName>
            </value>
            <value>
                <fullName>Onshore Unit Testing Complete</fullName>
            </value>
            <value>
                <fullName>Onshore Unit Testing Feedback Incorporated</fullName>
            </value>
            <value>
                <fullName>Onshore Team Review</fullName>
            </value>
            <value>
                <fullName>Onshore Team Feedback Incorporated</fullName>
            </value>
            <value>
                <fullName>Onshore Team Feedback Unit Testing Complete, Ready for Next Environment</fullName>
                <label>Onshore Team Feedback Unit Testing Complete</label>
            </value>
            <value>
                <fullName>Client Reviewed and/or Ready for Next Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>