force-app/main/default/objects/Request__c/fields/Build_Total__c.field-meta.xml
<CustomField>
    <fullName>Build_Total__c</fullName>
    <description>Estimated Level of Effort (Hours) for build of the request</description>
    <label>Build Total</label>
    <summarizedField>Application_Inventory__c.Total_Build__c</summarizedField>
    <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>