force-app/main/default/objects/Request__c/fields/Business_Benefit_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Benefit_Value__c</fullName>
    <description>Value is calculated by the selection of the Business Benefit field.</description>
    <formula>CASE( 
Business_Benefit__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
    <inlineHelpText>Value is calculated by the selection of the Business Benefit field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
    <label>Business Benefit Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>