force-app/main/default/objects/Request__c/fields/Business_Unit_Requesting__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Requesting__c</fullName>
    <label>Business Unit Requesting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>