force-app/main/default/objects/Request__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <label>Business Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - High Value</fullName>
            </value>
            <value>
                <fullName>2 - Low Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>