force-app/main/default/objects/Request__c/fields/Business_Value_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Details__c</fullName>
    <description>This is a Required Field for scoping.  Includes the details of why this request would be implemented, and the expected business value</description>
    <inlineHelpText>This is a Required Field for scoping.  Includes the details of why this request would be implemented, and the expected business value</inlineHelpText>
    <label>Business Value Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>