force-app/main/default/objects/Request__c/fields/BUT__c.field-meta.xml
<CustomField>
    <fullName>BUT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days estimated to complete Build and Unit Test phase.</description>
    <inlineHelpText>Number of days estimated to complete Build and Unit Test phase.</inlineHelpText>
    <label>Build</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>