force-app/main/default/objects/Request__c/fields/Capability_Owner__c.field-meta.xml
<CustomField>
    <fullName>Capability_Owner__c</fullName>
    <formula>Capability__r.Owner:User.FirstName&amp;&quot; &quot;&amp;Capability__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capability Owner</label>
    <type>Text</type>
</CustomField>