force-app/main/default/objects/Request__c/fields/Capacity_Type__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Type__c</fullName>
    <description>Category of the request</description>
    <inlineHelpText>Emergency: A known error in existing functionality 
Feature/Function: Enhancement or modification to an existing functionality 
New Capability: New functionality to support process 
Ongoing Maintenance: Activities that need to be performed regularly</inlineHelpText>
    <label>Capacity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Feature/Function</fullName>
            </value>
            <value>
                <fullName>New Capability</fullName>
            </value>
            <value>
                <fullName>Ongoing Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>