force-app/main/default/objects/Request__c/fields/Client_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Request_ID__c</fullName>
    <description>Shows Client Request ID</description>
    <label>Client Request ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>