force-app/main/default/objects/Request__c/fields/Closed_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Closed_Deferred__c</fullName>
    <description>Reason of closing or deferring the request</description>
    <label>Reason Closed/Deferred</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deferred: Waiting Architecture Availabiity</fullName>
            </value>
            <value>
                <fullName>Deferred: Product Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Deferred: Waiting Approval</fullName>
            </value>
            <value>
                <fullName>Closed: Architecturally Not Recommended</fullName>
            </value>
            <value>
                <fullName>Closed: Satisfied Through Business Process Change</fullName>
            </value>
            <value>
                <fullName>Closed: Canceled by Business</fullName>
            </value>
            <value>
                <fullName>Closed: Duplicate</fullName>
            </value>
            <value>
                <fullName>Closed: Technically Not Feasible</fullName>
            </value>
            <value>
                <fullName>Closed: Existing Functionality</fullName>
            </value>
            <value>
                <fullName>Deferred: Aligned to Future State Capabilities</fullName>
            </value>
            <value>
                <fullName>Closed: Consolidated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>