force-app/main/default/objects/Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Details of the reason of closing or deferring the request</description>
    <label>Reason Closed/Deferred Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>