force-app/main/default/objects/Request__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>This is the date that the requirement build  is completed</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>