force-app/main/default/objects/Request__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - High Complexity</fullName>
            </value>
            <value>
                <fullName>2 - Low Complexity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>