force-app/main/default/objects/Request__c/fields/Complexity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Rating__c</fullName>
    <formula>CASE(  Level_of_Complexity__c  , &#39;Low&#39;, 1, &#39;Medium&#39;, 2, &#39;High&#39;, 3,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complexity Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>