force-app/main/default/objects/Request__c/fields/Cont__c.field-meta.xml
<CustomField>
    <fullName>Cont__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Overall Contingency allowed.</description>
    <inlineHelpText>Overall Contingency allowed in percentage.</inlineHelpText>
    <label>Overall Contingency(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>