force-app/main/default/objects/Request__c/fields/Custom_Rating__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rating__c</fullName>
    <formula>CASE( Fit_or_Gap__c , &#39;Configuration&#39;, 1, &#39;Customization&#39;, 2,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>