force-app/main/default/objects/Request__c/fields/Data_Classification__c.field-meta.xml
<CustomField>
    <fullName>Data_Classification__c</fullName>
    <defaultValue>&#39;N/A&#39;</defaultValue>
    <label>Data Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Data</fullName>
            </value>
            <value>
                <fullName>Transactional Data</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>