force-app/main/default/objects/Request__c/fields/Days_On_Approve_Approved_to_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Approve_Approved_to_Deploy__c</fullName>
    <formula>( TimeSpentOn_Approved_to_Deploy__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approve: Approved to Deploy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>