force-app/main/default/objects/Request__c/fields/Days_On_Approved_Emergency_Release__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Approved_Emergency_Release__c</fullName>
    <formula>( TimeSpentOn_Approved_Emergency_Release__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days On Approved Emergency Release</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>