force-app/main/default/objects/Request__c/fields/Days_On_Close_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Close_Deployed__c</fullName>
    <formula>( TimeSpentOn_Deployed__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close: Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>