force-app/main/default/objects/Request__c/fields/Days_On_Close_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Close_Rejected__c</fullName>
    <formula>( TimeSpentOn_Rejected__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close: Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>