force-app/main/default/objects/Request__c/fields/Days_On_Consolidate_Approve_to_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Consolidate_Approve_to_Estimate__c</fullName>
    <formula>( TimeSpentOn_Approve_to_Estimate__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consolidate: Approve to Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>