force-app/main/default/objects/Request__c/fields/Days_On_Identify_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Identify_Change_Request__c</fullName>
    <formula>(TimeSpentOn_Identify_Change_Request__c/(24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days On Identify: Change Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>