force-app/main/default/objects/Request__c/fields/Days_On_Identify_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Identify_Deferred__c</fullName>
    <formula>( TimeSpentOn_Deferred__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identify: Deferred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>