force-app/main/default/objects/Request__c/fields/Days_On_Identify_New_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Identify_New_Requirement__c</fullName>
    <formula>(TimeSpentOn_Identify_New_Requirement__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identify: New Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>