force-app/main/default/objects/Request__c/fields/Days_On_Level_of_Effort_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Level_of_Effort_Complete__c</fullName>
    <formula>( TimeSpentOn_Level_of_Effort_Complete__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level of Effort Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>