force-app/main/default/objects/Request__c/fields/Days_On_Release_Build_Production__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Release_Build_Production__c</fullName>
    <formula>( TimeSpentOn_Build_Production__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release: Build Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>