force-app/main/default/objects/Request__c/fields/Days_On_Release_No_Build_Req__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Release_No_Build_Req__c</fullName>
    <formula>( TimeSpentOn_No_Build_Req__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days On Release: No Build Req</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>