force-app/main/default/objects/Request__c/fields/Days_On_Release_UAT__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Release_UAT__c</fullName>
    <formula>( TimeSpentOn_UAT__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release: UAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>