force-app/main/default/objects/Request__c/fields/Days_On_Submit_for_Business_Review__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Submit_for_Business_Review__c</fullName>
    <formula>( TimeSpentOn_Submit_for_Business_Review__c / (24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit for Business Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>