force-app/main/default/objects/Request__c/fields/Delivery_Option_3__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is only used for the Service Cloud Phase 2 project</description>
    <label>Delivery Option 3</label>
    <type>Checkbox</type>
</CustomField>