force-app/main/default/objects/Request__c/fields/Delivery_Option_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_Subtype__c</fullName>
    <defaultValue>&#39;N/A&#39;</defaultValue>
    <description>This field is only used for the service cloud phase 2 project.</description>
    <label>Delivery Option Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>