force-app/main/default/objects/Request__c/fields/Des__c.field-meta.xml
<CustomField>
    <fullName>Des__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days estimated for the Design phase.</description>
    <inlineHelpText>Number of days estimated for the Design phase.</inlineHelpText>
    <label>Design</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>