force-app/main/default/objects/Request__c/fields/Design_Total__c.field-meta.xml
<CustomField>
    <fullName>Design_Total__c</fullName>
    <description>Estimated Level of Effort (Hours) for design of the request</description>
    <label>Design Total</label>
    <summarizedField>Application_Inventory__c.Total_Design__c</summarizedField>
    <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>