force-app/main/default/objects/Request__c/fields/Developer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Developer_Comments__c</fullName>
    <description>This field is used for developer comments on the requirement build.</description>
    <label>Developer Comments</label>
    <type>TextArea</type>
</CustomField>