force-app/main/default/objects/Request__c/fields/DeveloperAssigned__c.field-meta.xml
<CustomField>
    <fullName>DeveloperAssigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>