force-app/main/default/objects/Request__c/fields/Estimate_Assumption__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Assumption__c</fullName>
    <description>Any assumptions which were taken during the estimations for the request</description>
    <label>Estimate Assumption</label>
    <type>TextArea</type>
</CustomField>