force-app/main/default/objects/Request__c/fields/Fit_Gap_Status__c.field-meta.xml
<CustomField>
    <fullName>Fit_Gap_Status__c</fullName>
    <label>Fit/Gap Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>For Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>