force-app/main/default/objects/Request__c/fields/Fit_or_Gap__c.field-meta.xml
<CustomField>
    <fullName>Fit_or_Gap__c</fullName>
    <label>Fit/Gap</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fit</fullName>
                <label>Configuration</label>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>