force-app/main/default/objects/Request__c/fields/Fjord_Concept__c.field-meta.xml
<CustomField>
    <fullName>Fjord_Concept__c</fullName>
    <label>Fjord Concept</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dot Dot Dash</fullName>
            </value>
            <value>
                <fullName>Signal</fullName>
            </value>
            <value>
                <fullName>All Aboard</fullName>
            </value>
            <value>
                <fullName>Single Track</fullName>
            </value>
            <value>
                <fullName>Spur</fullName>
            </value>
            <value>
                <fullName>TRAX</fullName>
            </value>
            <value>
                <fullName>Wilbur</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Interxchange</fullName>
            </value>
            <value>
                <fullName>Hot Car Prime</fullName>
            </value>
            <value>
                <fullName>The Herd</fullName>
            </value>
            <value>
                <fullName>On The Spot</fullName>
            </value>
            <value>
                <fullName>Traction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>