force-app/main/default/objects/Request__c/fields/Functional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Functional_Comments__c</fullName>
    <description>Place all functional notes related to this requirement in this section.</description>
    <inlineHelpText>Place all functional notes related to this requirement in this section.</inlineHelpText>
    <label>Functional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>