force-app/main/default/objects/Request__c/fields/Functional_Description__c.field-meta.xml
<CustomField>
    <fullName>Functional_Description__c</fullName>
    <description>Functional Description of the request</description>
    <inlineHelpText>Include information about the impacts the functionality will have to the end user. Specifically, what they will see on the interface, how often the data will be updated, etc.</inlineHelpText>
    <label>Functional Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>